[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-diag"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "psutil>=5.9",
    "nvidia-ml-py>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.0"]

[project.scripts]
gpu-diag = "gpu_diag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gpu_diag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
